Removed sychronyzed nut new enemyLogic returns a copy of the enemy alive list